# interview-example

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/: config.py  security.py  settings.py
apps/posts/: admin.py  filters.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/posts/migrations/: 0002_optimize_post_fields_and_indexes.py
apps/posts/utils/: hashtags.py
apps/users/: apps.py  serializers.py  services.py  urls.py  views.py
config/: asgi.py  celery.py  security.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
posts/migrations/: 0001_initial.py
